add image asset preload

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
     <script src="./commands.js"></script>
     <script src="./onsend.js"></script>
+    <!-- load image assets -->
+     <link rel="preload" as="image" href="./assets/icon-16.png" />
+     <link rel="preload" as="image" href="./assets/icon-32.png" />
+     <link rel="preload" as="image" href="./assets/icon-80.png" />
   </head>
   <body>Send Secure Add-in functions loaded.</body>
 </html>
